Fix hub wide view on Safari. Changed category taxon_name to nomenclature

--- a/app/assets/stylesheets/helpers/hub/filter.scss
+++ b/app/assets/stylesheets/helpers/hub/filter.scss
@@ -80,7 +80,7 @@
 
     .item2 {
       display: flex;
-      width: 100%;
+      //width: 100%;
       min-width: 250px;
     }
 
